Add python example script - Climate Russia

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 .Rhistory
 .RData
 .Ruserdata
+
+Python/\.ipynb_checkpoints/climat_russia_cities-checkpoint\.ipynb
+
+Python/Climat russia/\.ipynb_checkpoints/Climat russia-checkpoint\.ipynb
+
+Python/Climat russia/climat_russia_cities\.xlsx
+
+Python/Climat russia/\.ipynb_checkpoints/Climate Russia-checkpoint\.ipynb
+
+Python/Climat russia/climate_russia_cities\.xlsx
