Restore python example script - Climate Russia

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Python/Climat russia/climat_russia_cities\.xlsx
 Python/Climat russia/\.ipynb_checkpoints/Climate Russia-checkpoint\.ipynb
 
 Python/Climat russia/climate_russia_cities\.xlsx
+
+Python/Climat russia/google key\.txt
