--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ Python/Climat russia/\.ipynb_checkpoints/Climate Russia-checkpoint\.ipynb
 Python/Climat russia/climate_russia_cities\.xlsx
 
 Python/Climat russia/google key\.txt
+
+Python/Cufflinks and plotly/\.ipynb_checkpoints/
+
+*.xlsx
+
+Python/Fruits/\.ipynb_checkpoints/
