--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ Python/Fruits/\.ipynb_checkpoints/
 OpenAI_API/api_key.txt
 
 OpenAI_API/.ipynb_checkpoints/
+
+OMDb_API/api_key.txt
+
+OMDb_API/.ipynb_checkpoints/
