refactor: move api use cases to general folder for movie recommendation

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ OpenAI_API/.ipynb_checkpoints/
 OMDb_API/api_key.txt
 
 OMDb_API/.ipynb_checkpoints/
+
+Movie_recommendation_sketch/OpenAI_API/api_key.txt
+
+Movie_recommendation_sketch/OpenAI_API/.ipynb_checkpoints/
+
+Movie_recommendation_sketch/OMDb_API/.ipynb_checkpoints/
+
+Movie_recommendation_sketch/OMDb_API/api_key.txt
